--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "funcserialize",
-  "version": "0.0.1",
-  "description": "An easy way to serialize a function into an object and deserialize the object back into a facunction.",
+  "version": "0.0.2",
+  "description": "A module to take a function and convert it into an object. And then, with the same object, convert it back into a function. The object is suitable for conversion to JSON via `JSON.stringify`.",
   "main": "index.js",
   "scripts": {
     "test" : "./node_modules/.bin/mocha --reporter list"
