--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "funcserialize",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A module to take a function and convert it into an object. And then, with the same object, convert it back into a function. The object is suitable for conversion to JSON via `JSON.stringify`.",
   "main": "index.js",
   "scripts": {
-    "test" : "./node_modules/.bin/mocha --reporter list"
+    "test" : "./node_modules/.bin/mocha --reporter list ./test.js"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/stdarg/funcserialize.git"
   },
   "keywords": [
+    "func",
     "function",
     "serialize",
     "deserialize",
@@ -22,11 +23,11 @@
     "url": "https://github.com/stdarg/funcserialize/issues"
   },
   "dependencies": {
-    "debug": "~0.7.2",
-	"function-name": "0.0.1",
-    "is2": "~0.0.4"
+    "debug": "0.7.4",
+    "function-name": "0.0.1",
+    "is2": "0.0.12"
   },
   "devDependencies": {
-    "mocha": "~1.13.0"
+    "mocha": "1.17.1"
   }
 }
